objects/JunoDoc__Juno_Sign_Recipient__c/JunoDoc__Juno_Sign_Recipient__c.object-meta.xml
<CustomObject>
    <label>JunoSign Recipient</label>
    <nameField>
        <displayFormat>JRN-{00000}</displayFormat>
        <label>JunoSign Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JunoSign Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>