objects/JunoDoc__Juno_Sign_Recipient__c/fields/JunoDoc__Juno_Sign_Transaction__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Juno_Sign_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JunoSign Transaction</label>
    <referenceTo>JunoDoc__Juno_Sign_Transaction__c</referenceTo>
    <relationshipLabel>JunoSign Recipients</relationshipLabel>
    <relationshipName>JunoSign_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>