objects/JunoDoc__Juno_Sign_Recipient__c/fields/JunoDoc__Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>