objects/JunoDoc__Juno_Sign_Recipient__c/fields/JunoDoc__Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>