objects/JunoDoc__Juno_Sign_Recipient__c/fields/JunoDoc__Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>