objects/JunoDoc__Juno_Sign_Recipient__c/fields/JunoDoc__Signed_File_Id__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Signed_File_Id__c</fullName>
    <label>Signed File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>