objects/JunoDoc__Juno_Sign_Recipient__c/fields/JunoDoc__Signed_File_Id_Link__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Signed_File_Id_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+JunoDoc__Signed_File_Id__c ,JunoDoc__Signed_File_Id__c,&quot;_blank&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed File Id Link</label>
    <type>Text</type>
</CustomField>