objects/JunoDoc__Juno_Sign_Recipient__c/fields/JunoDoc__Signed_On__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Signed_On__c</fullName>
    <label>Signed On</label>
    <type>Date</type>
</CustomField>