objects/JunoDoc__Juno_Sign_Recipient__c/fields/JunoDoc__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>